--- a/Documentation/Intel/development.html
+++ b/Documentation/Intel/development.html
@@ -69,6 +69,7 @@
   </li>
   <li>Get result to start <a target="_blank" href="SoC/soc.html#Descriptor">booting</a></li>
   <li><a target="_blank" href="SoC/soc.html#EarlyDebug">Early Debug</a></li>
+  <li>Implement and debug the <a target="_blank" href="SoC/soc.html#Bootblock">bootblock</a> code</li>
 </ol>
 
 
