Documentation: Fix links to Intel/documentation.html
Fix links to the documenation.html page which was renamed from
x86Documenation.html.

TEST=Verified documentation links and searched for x86Documenation.html

Change-Id: Icee79bab4c05ac9b8010dc7acdde8dd5e2ab2909
Signed-off-by: Lee Leahy <leroy.p.leahy@intel.com>
Reviewed-on: https://review.coreboot.org/13592
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/Documentation/Intel/Board/board.html
+++ b/Documentation/Intel/Board/board.html
@@ -9,7 +9,7 @@
 <p>
   Board development requires System-on-a-Chip (SoC) support.
   The combined steps are listed
-  <a target="_blank" href="../x86Development.html">here</a>.
+  <a target="_blank" href="../development.html">here</a>.
   The development steps for the board are listed below:
 </p>
 <ol>
