--- a/Documentation/Intel/Board/galileo.html
+++ b/Documentation/Intel/Board/galileo.html
@@ -13,7 +13,7 @@
       The Intel&reg; Galileo Gen 2 mainboard code was developed along with the Intel&reg;
       <a target="_blank" href="../SoC/quark.html">Quark&trade;</a> SoC:
       <ul>
-        <li><a target="_blank" href="../x86Development.html">Overall</a> development</li>
+        <li><a target="_blank" href="../development.html">Overall</a> development</li>
         <li><a target="_blank" href="../SoC/soc.html">SoC</a> support</li>
         <li><a target="_blank" href="../fsp1_1.html">FSP 1.1</a> integration</li>
         <li><a target="_blank" href="board.html">Board</a> support</li>
