--- a/Documentation/Intel/SoC/quark.html
+++ b/Documentation/Intel/SoC/quark.html
@@ -14,7 +14,7 @@
       <a target="_blank" href="../Board/galileo.html">Galileo Gen 2</a>
       board:
       <ul>
-        <li><a target="_blank" href="../x86Development.html">Overall</a> development</li>
+        <li><a target="_blank" href="../development.html">Overall</a> development</li>
         <li><a target="_blank" href="soc.html">SoC</a> support</li>
         <li><a target="_blank" href="../fsp1_1.html">FSP 1.1</a> integration</li>
         <li><a target="_blank" href="../Board/board.html">Board</a> support</li>
