--- a/Documentation/Intel/SoC/soc.html
+++ b/Documentation/Intel/SoC/soc.html
@@ -9,7 +9,7 @@
 <p>
   SoC development is best done in parallel with development for a specific
   board.  The combined steps are listed
-  <a target="_blank" href="../x86Development.html">here</a>.
+  <a target="_blank" href="../development.html">here</a>.
   The development steps for the SoC are listed below:
 </p>
 <ol>
