--- a/Documentation/Intel/fsp1_1.html
+++ b/Documentation/Intel/fsp1_1.html
@@ -9,7 +9,7 @@
 <p>
   Firmware Support Package (FSP) development requires System-on-a-Chip (SoC)
   and board support.  The combined steps are listed
-  <a target="_blank" href="x86Development.html">here</a>.
+  <a target="_blank" href="development.html">here</a>.
   The development steps for FSP are listed below:
 </p>
 <ol>
@@ -25,7 +25,7 @@
 
 <hr>
 <h1><a name="RequiredFiles">Required Files</a></h1>
-<h2><a name="CorebootRequiredFiles">Coreboot Required Files</a></h2>
+<h2><a name="corebootRequiredFiles">coreboot Required Files</a></h2>
 <ol>
   <li>Create the following directories if they do not already exist:
     <ul>
