--- a/Documentation/Intel/index.html
+++ b/Documentation/Intel/index.html
@@ -19,7 +19,7 @@
 
 
 
-<h1>x86 Coreboot Development</h1>
+<h1>x86 coreboot Development</h1>
 <ul>
   <li><a target="_blank" href="development.html">Overall</a> development</li>
   <li><a target="_blank" href="fsp1_1.html">FSP 1.1</a> integration
